# Olist-ML-Platform

./: Makefile  README.md
docs/: architecture.md  bi_integration.md
project-pyspark/: README.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
project-pyspark/conf/: feature_config.yml
project-pyspark/notebooks/: 01_exploration.py
project-pyspark/src/olist_seg/: __init__.py  cli.py  config.py  features.py  io.py  score.py  spark_session.py  train.py
project-pyspark/tests/: conftest.py  test_features.py  test_train.py
project-sql/: README.md  dbt_project.yml  profiles.example.yml  requirements.txt
project-sql/ci/: profiles.yml
project-sql/macros/: generate_schema_name.sql  grant_bi_roles.sql
project-sql/models/marts/: _marts.yml  dim_customers.sql  fct_customer_segments.sql  mart_bi_customer_segments.sql
project-sql/models/staging/: _sources.yml  _stg_models.yml  stg_customers.sql
project-sql/seeds/: br_state_region.csv
project-sql/snowflake/migrations/: R__clustering_keys.sql  V1.1.0__database_and_schemas.sql  V1.2.0__roles_and_grants.sql  V1.3.0__raw_customers_table.sql
project-sql/snowflake/ml/: sp_apply_segments.sql  sp_train_kmeans_segments.sql
project-sql/tests/: assert_segment_coverage.sql
