[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olist-seg"
version = "1.0.0"
description = "Segmentación de clientes Olist con PySpark + MLflow"
requires-python = ">=3.10"
dependencies = [
    "pyspark==3.5.1",
    "mlflow>=2.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "delta-spark==3.2.0",
]

[project.scripts]
olist-seg = "olist_seg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=olist_seg --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
